--- a/Public/contact.html
+++ b/Public/contact.html
@@ -1,6 +1,19 @@
-<h1>Contact Info</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Leander_Joseph_Lucas_CV</title>
+    <link rel="stylesheet" href="../style.css">
+</head>
+<body>
+    <h1>Contact Information</h1>
 <ul>
     <li>Email: leanderjosephlucas@gmail.com</li>
     <li>Phone: +352621647782</li>
     <li><a href="https://www.linkedin.com/in/leander-lucas-6b6730b8/">Linkedin Profile</a></li>
 </ul>
+</body>
+</html>
+
+
