--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leander_Joseph_Lucas_CV</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>LEANDER JOSEPH LUCAS</h1>
+    <h1 class="center">LEANDER JOSEPH LUCAS</h1>
     <hr>
-    <h2>Operations Coordinator</h2>
-        <p>Versatile and experienced Operations Manager/Coordinator and IT professional</p>
+    <h2 class="center">Operations Coordinator</h2>
+        <p class="center">Versatile and experienced Operations Manager/Coordinator and IT professional</p>
     <hr>
         <p>Dynamic and results-oriented Operations Manager/Coordinator with extensive experience in project and program management.
             Skilled in data analysis, stakeholder coordination, and process optimization. Experienced in driving efficiency improvements
